--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>My Very First Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>My Very First Website</h1>
+    <h2>Cade Slayden</h2>
   </body>
 </html>
