--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My Very First Website</title>
   </head>
   <body>
+    <script src="script.js"></script>
     <h1>My Very First Website</h1>
     <h2>Cade Slayden</h2>
   </body>
