--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
-    <title>My Very First Website</title>
+    <title>North Fork Crossing</title>
   </head>
   <body>
-    <script src="script.js"></script>
-    <h1>My Very First Website</h1>
-    <h2>Cade Slayden</h2>
+    <h1>North Fork Crossing</h1>
+    <h2>Bluegrass Music in the Beautiful Gallatin Valley</h2>
   </body>
 </html>
